--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+beautifulsoup4==4.4.1
 Flask==0.10.1
 gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+requests==2.9.1
 Werkzeug==0.11.3
 wheel==0.24.0
+wunderpy2==0.1.2
